jasper/force-app/main/default/objects/Feedback__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>Please share any additional comments, suggestions, or concerns about your experience with our service:</inlineHelpText>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>