jasper/force-app/main/default/objects/Feedback__c/fields/Additional_Services_Or_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_Or_Repairs__c</fullName>
    <inlineHelpText>Were there any additional services or repairs recommended by our technicians?</inlineHelpText>
    <label>Additional Services Or Repairs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>