jasper/force-app/main/default/objects/Feedback__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>