jasper/force-app/main/default/objects/Feedback__c/fields/Date_Of_Services__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Services__c</fullName>
    <formula>Work_Order__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Of Service</label>
    <type>Date</type>
</CustomField>