jasper/force-app/main/default/objects/Feedback__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>Work_Order__r.Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>