jasper/force-app/main/default/objects/Feedback__c/fields/please_specifys__c.field-meta.xml
<CustomField>
    <fullName>please_specifys__c</fullName>
    <label>Please Specify</label>
    <length>18</length>
    <type>Text</type>
</CustomField>