jasper/force-app/main/default/objects/Feedback__c/fields/Price_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Value__c</fullName>
    <label>Price/Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>