jasper/force-app/main/default/objects/Feedback__c/fields/Problem_Recurred_Again__c.field-meta.xml
<CustomField>
    <fullName>Problem_Recurred_Again__c</fullName>
    <inlineHelpText>Has the problem recurred again?</inlineHelpText>
    <label>Has The Problem Recurred Again</label>
    <type>TextArea</type>
</CustomField>