jasper/force-app/main/default/objects/Feedback__c/fields/Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Professionalism__c</fullName>
    <label>Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>