jasper/force-app/main/default/objects/Feedback__c/fields/Quality_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Quality_Of_Work__c</fullName>
    <label>Quality Of Work</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>