jasper/force-app/main/default/objects/Feedback__c/fields/Recommend_Our_Service__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Our_Service__c</fullName>
    <inlineHelpText>How likely are you to recommend our service to others?</inlineHelpText>
    <label>Recommend Our Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Very Unlikely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>