jasper/force-app/main/default/objects/Feedback__c/fields/Satisfied_Resolution_Provided__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_Resolution_Provided__c</fullName>
    <inlineHelpText>Are you satisfied with the resolution provided?</inlineHelpText>
    <label>Was a Satisfied Resolution Provided</label>
    <length>18</length>
    <type>Text</type>
</CustomField>