jasper/force-app/main/default/objects/Feedback__c/fields/service__c.field-meta.xml
<CustomField>
    <fullName>service__c</fullName>
    <inlineHelpText>Was the service completed to your satisfaction?</inlineHelpText>
    <label>Service Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>