jasper/force-app/main/default/objects/Feedback__c/fields/Service_Performed__c.field-meta.xml
<CustomField>
    <fullName>Service_Performed__c</fullName>
    <inlineHelpText>Did our team explain the service performed and answer your questions adequately?</inlineHelpText>
    <label>Service Performed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>