jasper/force-app/main/default/objects/Feedback__c/fields/Service_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Service_Timeliness__c</fullName>
    <label>Service Timeliness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>