jasper/force-app/main/default/objects/Feedback__c/fields/Time_liness__c.field-meta.xml
<CustomField>
    <fullName>Time_liness__c</fullName>
    <label>Timeliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>