jasper/force-app/main/default/objects/Feedback__c/fields/Type_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Service__c</fullName>
    <inlineHelpText>What type of service did you receive for your electric two-wheeler?</inlineHelpText>
    <label>Type Of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Maintenance</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>