jasper/force-app/main/default/objects/Feedback__c/fields/Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Number__c</fullName>
    <formula>Work_Order__r.Vehicle__r.VehicleRegistrationNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Registration Number</label>
    <type>Text</type>
</CustomField>