jasper/force-app/main/default/objects/Feedback__c/fields/We_Can_Do_Better__c.field-meta.xml
<CustomField>
    <fullName>We_Can_Do_Better__c</fullName>
    <inlineHelpText>Is there anything we can do better?</inlineHelpText>
    <label>What Can We Do Better</label>
    <type>TextArea</type>
</CustomField>