jasper/force-app/main/default/objects/Feedback__c/recordTypes/Major.recordType-meta.xml
<RecordType>
    <fullName>Major</fullName>
    <active>true</active>
    <label>Major</label>
</RecordType>