jasper/force-app/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Comments__c</columns>
    <columns>Service_Advisor_Performance__c</columns>
    <columns>Service_Quality__c</columns>
    <columns>Service_Satisfaction_Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>